--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "nuxt-app",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "nuxt": "^3.13.2",
@@ -15,7 +17,11 @@
     "vue-router": "latest"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.8.0",
+    "@nuxt/eslint": "^0.6.0",
     "@nuxt/fonts": "^0.10.1",
-    "@nuxt/ui": "^2.18.7"
+    "@nuxt/ui": "^2.18.7",
+    "eslint": "^9.12.0",
+    "eslint-plugin-format": "^0.1.2"
   }
 }
