--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@antfu/eslint-config": "^3.8.0",
     "@nuxt/eslint": "^0.6.0",
     "@nuxt/fonts": "^0.10.1",
+    "@nuxt/image": "^1.8.1",
     "@nuxt/ui": "^2.18.7",
     "eslint": "^9.12.0",
     "eslint-plugin-format": "^0.1.2"
