--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+
   "files.associations": {
     "*.css": "tailwindcss"
   },
@@ -49,11 +50,11 @@
     "typescriptreact",
     "vue",
     "html",
-    "markdown",
+    // "markdown",
     "json",
     "json5",
     "jsonc",
-    "yaml",
+    // "yaml",
     "toml",
     "xml",
     "gql",
