Refactor layout structure: simplify app.vue, update image handling in Hero and Selayang components, and adjust VSCode settings; add Cloudinary support in nuxt.config.ts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,11 +50,11 @@
     "typescriptreact",
     "vue",
     "html",
-    // "markdown",
+    "markdown",
     "json",
     "json5",
     "jsonc",
-    // "yaml",
+    "yaml",
     "toml",
     "xml",
     "gql",
