--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@nuxtjs/cloudinary": "^3.1.1",
     "nuxt": "^3.13.2",
     "vue": "latest",
     "vue-router": "latest"
