--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@nuxt/content": "^2.13.4",
     "@nuxt/eslint": "^0.6.0",
     "@nuxt/fonts": "^0.10.1",
-    "@nuxt/image": "^1.8.1",
+    "@nuxt/image": "npm:@nuxt/image-nightly@latest",
     "@nuxt/ui": "^2.18.7",
     "@nuxtjs/seo": "^2.0.0-rc.23",
     "eslint": "^9.12.0",
