--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@nuxtjs/cloudinary": "^3.1.1",
+    "aos": "^2.3.4",
     "nuxt": "^3.13.2",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-social-sharing": "^4.0.0-alpha4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.8.0",
