--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nuxt/fonts": "^0.10.1",
     "@nuxt/image": "npm:@nuxt/image-nightly@latest",
     "@nuxt/ui": "^2.18.7",
+    "@nuxthq/studio": "^2.1.1",
     "@nuxtjs/seo": "^2.0.0-rc.23",
     "eslint": "^9.12.0",
     "eslint-plugin-format": "^0.1.2",
