--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@iconify-json/basil": "^1.2.1",
     "@iconify-json/hugeicons": "^1.2.1",
     "@iconify-json/ph": "^1.2.1",
     "@nuxtjs/cloudinary": "^3.1.1",
     "@vercel/analytics": "^1.3.2",
     "@vercel/speed-insights": "^1.0.14",
-    "aos": "^2.3.4",
+    "@vueuse/motion": "^2.2.6",
     "nuxt": "^3.13.2",
     "vue": "latest",
     "vue-router": "latest",
