--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nuxt": "^3.13.2",
     "vue": "latest",
     "vue-router": "latest",
-    "vue-social-sharing": "^4.0.0-alpha4"
+    "vue-social-sharing": "^4.0.0-alpha4",
+    "vue-use-active-scroll": "^1.1.3"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.8.0",
@@ -34,6 +35,7 @@
     "@nuxt/ui": "^2.18.7",
     "@nuxthq/studio": "^2.1.1",
     "@nuxtjs/seo": "^2.0.0-rc.23",
+    "@tailwindcss/typography": "^0.5.15",
     "eslint": "^9.12.0",
     "eslint-plugin-format": "^0.1.2",
     "lite-youtube-embed": "^0.3.3"
